package in.itkaran.lld1130624.lld2.decorator;

public interface IceCream {
    public Double getCost();
    public String getDescription();
}
