package in.itkaran.lld1130624.lld2.decorator;

public abstract class  ToppingDecorator implements IceCream {
    protected IceCream iceCream;
}
